event pages added

--- a/app/views/event/Movielicious.html.erb
+++ b/app/views/event/Movielicious.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Encoded Beans</title>
+    <title>Movielicious</title>
     <meta name="description" content="Spirit8 is a Digital agency one page template built based on bootstrap framework. This template is design by Robert Berki and coded by Jenn Pereira. It is simple, mobile responsive, perfect for portfolio and agency websites. Get this for free exclusively at ThemeForces.com">
     <meta name="keywords" content="bootstrap theme, portfolio template, digital agency, onepage, mobile responsive, spirit8, free website, free theme, themeforces themes, themeforces wordpress themes, themeforces bootstrap theme">
     <meta name="author" content="ThemeForces.com">
@@ -70,7 +70,7 @@
             <!--<li><a href="#tf-works" class="page-scroll">Events</a></li>-->
             <li><a href="/#tf-testimonials" class="page-scroll">Messages</a></li>
             <li><a href="/#tf-contact" class="page-scroll">Contact</a></li>
-          </ul>
+          </ul>>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
@@ -80,7 +80,7 @@
     <div id="tf-home" class="text-center">
         <div class="overlay">
             <div class="content">
-                <strong><font color="#fcac45", size="7">ENCODED BEANS</font></strong>
+                <strong><font color="#fcac45", size="7">MOVIELICIOUS</font></strong>
 				<p class="lead"><font size="4"></font></p>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll" style="margin-top: 0;"></a>
                 
@@ -94,42 +94,8 @@
         <div class="container">
             <div class="row">
             <div>
-                <p>Java is easy! Isn’t it? If you are up to a challenge, then just play along! Test your programming skills in Java and win some exciting prizes! Quickly form your mighty team and come accept the challenge! Lead your team through our challenge consisting of 3 Rounds, defeating other teams and proclaim your prize while just coding! Start the challenge now and have a chance to proceed directly to Round 2! For more info, see below.                 
+                <p>This event is ALL ABOUT ENTERTAINMENT. From an unpretentious and fascinating theme, the event is going to bedazzle everyone. With the surety of being a blockbuster, it is a CRAZY combination of Dare, Dance, and Drama that is amusing just like a BOLLYWOOD MOVIE. Participants will be fighting for proving their craze for movies, crossing every limit and challenges that are put before them. From ACTION to DANCE, & MUSIC to DRAMA, this enjoyable event will be very intriguing to everyone. Not a cliché-ridden hit but it will be a surprisingly legendary episode. So fasten those seatbelts, because there will be no RETAKES in this CLIMAX. ROLL with us in this absorbing cinematic adventure in AVENSIS 2016
                 </p>
-                <h3><strong><ins>EVENT PLAN</ins></strong></h3>
-                <p>A total of 3 Rounds will take place :</p>
-                <ol>
-                    <h5><li><strong>PRELIMINARY ROUND</strong></li></h5>
-                    <p><strong>Online Quiz: </strong> An Online Round will take place on a website 1 week before the fest and will be active till before the day of the fest. This would include Java Quiz. From this round, top teams will proceed directly to Round 2 (Final). The exam will be of MCQ type, and winners will be sent emails to notify their direct selection. A Team may contain of 1 or 2 members.
-                        </p>
-                    <h5><li><strong>ROUND 1</strong></li></h5>
-                    <p><strong>Offline Quiz:</strong>An On-Campus round, this round will be held in a lab. In this round, an offline quiz will take place between the teams, this round will be of similar difficulty as of the Preliminary Round , so that the people who couldn’t participate in the preliminary has a fair chance of getting in the more difficult Round 2. Selected teams will qualify for Round 2 (Final).
-                    </p>
-                    <h5><li><strong>ROUND 2</strong></li></h5>
-                    <p><strong>Bug Fixing: </strong>This will be a little bit difficult but interesting round in which the participants will be asked to fix some bugs in the code provided by us. These will contain all types of bugs a developer cannot imagine, and all those who proceed to round 3 will be given small prizes for their achievement.
-                    </p>
-                    <hr/>
-                    <h3><emp>DAY 2</emp></h3>
-                    <hr/>
-                    <h5><li><strong>ROUND 3</strong></li></h5>
-                    <p><strong>A Mini-Project Round: </strong>This round is why we are conducting a team contest, all the participating teams will be given a small project, in terms of code length, so that they can spend more time on logic, and design. The round has three stages and all the stages have points allotted which will be summed up to give the winner, as we cannot select a winner on any single degree of measurement, here are the three stages :-
-                    </p>
-                    <ol>
-                        <li>In this round the teams will have to create a less formal but fully informative and robust design for the project they are going to work, we will provide them a max of 20 minutes to think about it. Scores will be given on the basis of their class design (those who finish faster can start coding).</li>
-                        <li>This is the most obvious round, in this they will have to begin coding, teams will be given a total of 2 hours to code. In this we will reward the points on the basis of coding talent, what all techniques they used, etc.</li>
-                        <li>This is the third round in which we will purely judge on the basis user experience and running times.</li>
-                    </ol>
-                </ol>
-                <hr/>
-                <h3><strong><ins>RULES AND REGULATIONS</ins></strong></h3>
-                <ul>
-                    <li>Scores of the three rounds will be added and a winner will be chosen from the finalists. The winner will
-    be awarded prizes as per the sponsorship goes.</li>
-                    <li>Maximum of 2 members allowed in a team. (Lone participation allowed).</li>
-                    <li>The Event consists of total 3 Rounds.</li>
-                    <li>Use of Internet or other electronic gadgets (except Exam machine on which you are coding) is
-     strictly prohibited.</li>
-                </ul>
             </div>
             </div>
         </div>
