--- a/app/views/welcome/funncreative.html.erb
+++ b/app/views/welcome/funncreative.html.erb
@@ -109,11 +109,11 @@
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong> Treasure Hunt</strong> - <em> Event which brings innovative thinkers in the house that is, this event has clues which are supposed to be guessed by the players.</em>
+                                <strong>Enigma : Treasure Hunt</strong> - <em> Event which brings innovative thinkers in the house that is, this event has clues which are supposed to be guessed by the players.</em>
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong> Food Gram </strong> - <em> Food lovers, this is your place to show your talent and be proud after eating anything and everything in bulk.</em>
+                                <strong> Eat Or Quit </strong> - <em> Food lovers, this is your place to show your talent and be proud after eating anything and everything in bulk.</em>
                             </li>
 							<li>
                                 <span class="fa fa-dot-circle-o"></span>
@@ -129,7 +129,7 @@
                             </li>
 							<li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong> Ecomaniac</strong> - <em> Questions related to our pretty nature and mother Earth are asked with some rejuvenating tasks. </em>
+                                <strong> Ecomaze</strong> - <em> Questions related to our pretty nature and mother Earth are asked with some rejuvenating tasks. </em>
                             </li>
 							<li>
                                 <span class="fa fa-dot-circle-o"></span>
