--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -57,19 +57,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Avensis 2016</a>
+          <a class="navbar-brand" href="/">Avensis 2016</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#tf-home" class="page-scroll">Home</a></li>
-            <li><a href="#tf-about" class="page-scroll">About</a></li>
-            <li><a href="#tf-team" class="page-scroll">Team</a></li>
-            <li><a href="#tf-services" class="page-scroll">Departments</a></li>
+            <li><a href="/#tf-home" class="page-scroll">Home</a></li>
+            <li><a href="/#tf-about" class="page-scroll">About</a></li>
+            <li><a href="/#tf-team" class="page-scroll">Team</a></li>
+            <li><a href="/#tf-services" class="page-scroll">Departments</a></li>
             <!--<li><a href="#tf-works" class="page-scroll">Events</a></li>-->
-            <li><a href="#tf-testimonials" class="page-scroll">Messages</a></li>
-            <li><a href="#tf-contact" class="page-scroll">Contact</a></li>
+            <li><a href="/#tf-testimonials" class="page-scroll">Messages</a></li>
+            <li><a href="/#tf-contact" class="page-scroll">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
