event page added part 2

--- a/app/views/welcome/design.html.erb
+++ b/app/views/welcome/design.html.erb
@@ -106,7 +106,7 @@
                         <ul class="about-list">
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Doodle Designing - GDG</strong> - <em>Have a passion for Designing? Come and design the doodle and the best entries will be sent directly to Google for suggestions and who knows if your doodle gets selected. Also, get a chance to work as an intern with one of the leading start-ups.</em>
+                                <strong>Google Doodle</strong> - <em>Have a passion for Designing? Come and design the doodle and the best entries will be sent directly to Google for suggestions and who knows if your doodle gets selected. Also, get a chance to work as an intern with one of the leading start-ups.</em>
                             </li>
         
                         </ul>
